# src/main/java/no/sikt/nva/pubchannels/handler/create/publisher/CreatePublisherHandler.java
@@ -1,22 +1,24 @@
 package no.sikt.nva.pubchannels.handler.create.publisher;
 
+import static no.sikt.nva.pubchannels.dataporten.ChannelType.PUBLISHER;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateOptionalIsbnPrefix;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateOptionalUrl;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateString;
 import static nva.commons.core.attempt.Try.attempt;
 import com.amazonaws.services.lambda.runtime.Context;
-import java.util.Map;
-import no.sikt.nva.pubchannels.HttpHeaders;
+import java.util.Calendar;
 import no.sikt.nva.pubchannels.dataporten.DataportenPublicationChannelClient;
 import no.sikt.nva.pubchannels.dataporten.model.create.DataportenCreatePublisherRequest;
+import no.sikt.nva.pubchannels.handler.ThirdPartyPublisher;
 import no.sikt.nva.pubchannels.handler.create.CreateHandler;
+import no.sikt.nva.pubchannels.handler.fetch.publisher.FetchByIdAndYearResponse;
 import nva.commons.apigateway.RequestInfo;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.core.Environment;
 import nva.commons.core.JacocoGenerated;
 
-public class CreatePublisherHandler extends CreateHandler<CreatePublisherRequest, Void> {
+public class CreatePublisherHandler extends CreateHandler<CreatePublisherRequest, FetchByIdAndYearResponse> {
 
     private static final String PUBLISHER_PATH_ELEMENT = "publisher";
 
@@ -30,23 +32,26 @@ public class CreatePublisherHandler extends CreateHandler<CreatePublisherRequest
     }
 
     @Override
-    protected Void processInput(CreatePublisherRequest input, RequestInfo requestInfo, Context context)
-        throws ApiGatewayException {
+    protected FetchByIdAndYearResponse processInput(CreatePublisherRequest input, RequestInfo requestInfo,
+                                                    Context context) throws ApiGatewayException {
         userIsAuthorizedToCreate(requestInfo);
         var validInput = attempt(() -> validate(input))
                              .map(CreatePublisherHandler::getClientRequest)
                              .orElseThrow(failure -> new BadRequestException(failure.getException().getMessage()));
-        var pid = publicationChannelClient.createPublisher(validInput);
-        var createdUri = constructIdUri(PUBLISHER_PATH_ELEMENT, pid.getPid());
-        addAdditionalHeaders(() -> Map.of(HttpHeaders.LOCATION, createdUri.toString()));
-        return null;
+        var createResponse = publicationChannelClient.createPublisher(validInput);
+
+        return FetchByIdAndYearResponse.create(
+            constructIdUri(PUBLISHER_PATH_ELEMENT, createResponse.getPid()),
+            (ThirdPartyPublisher) publicationChannelClient.getChannel(PUBLISHER, createResponse.getPid(), getYear()),
+            getYear());
+    }
+
+    private static String getYear() {
+        return String.valueOf(Calendar.getInstance().getWeekYear());
     }
 
     private static DataportenCreatePublisherRequest getClientRequest(CreatePublisherRequest request) {
-        return new DataportenCreatePublisherRequest(
-            request.getName(),
-            request.getIsbnPrefix(),
-            request.getHomepage());
+        return new DataportenCreatePublisherRequest(request.getName(), request.getIsbnPrefix(), request.getHomepage());
     }
 
     private CreatePublisherRequest validate(CreatePublisherRequest input) {
