# src/main/java/no/sikt/nva/pubchannels/handler/create/series/CreateSeriesHandler.java
@@ -1,24 +1,26 @@
 package no.sikt.nva.pubchannels.handler.create.series;
 
+import static no.sikt.nva.pubchannels.dataporten.ChannelType.SERIES;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateOptionalIssn;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateOptionalUrl;
 import static no.sikt.nva.pubchannels.handler.validator.Validator.validateString;
 import static nva.commons.core.attempt.Try.attempt;
 import com.amazonaws.services.lambda.runtime.Context;
-import java.util.Map;
-import no.sikt.nva.pubchannels.HttpHeaders;
+import java.util.Calendar;
 import no.sikt.nva.pubchannels.dataporten.DataportenPublicationChannelClient;
 import no.sikt.nva.pubchannels.dataporten.model.create.DataportenCreateSeriesRequest;
+import no.sikt.nva.pubchannels.handler.ThirdPartySeries;
 import no.sikt.nva.pubchannels.handler.create.CreateHandler;
+import no.sikt.nva.pubchannels.handler.fetch.series.FetchByIdAndYearResponse;
 import nva.commons.apigateway.RequestInfo;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.core.Environment;
 import nva.commons.core.JacocoGenerated;
 
-public class CreateSeriesHandler extends CreateHandler<CreateSeriesRequest, Void> {
+public class CreateSeriesHandler extends CreateHandler<CreateSeriesRequest, FetchByIdAndYearResponse> {
 
-    private static final String PATH_ELEMENT = "series";
+    private static final String SERIES_PATH_ELEMENT = "series";
 
     @JacocoGenerated
     public CreateSeriesHandler() {
@@ -30,16 +32,22 @@ public class CreateSeriesHandler extends CreateHandler<CreateSeriesRequest, Void
     }
 
     @Override
-    protected Void processInput(CreateSeriesRequest input, RequestInfo requestInfo, Context context)
+    protected FetchByIdAndYearResponse processInput(CreateSeriesRequest input, RequestInfo requestInfo, Context context)
         throws ApiGatewayException {
         userIsAuthorizedToCreate(requestInfo);
         var validInput = attempt(() -> validate(input))
                              .map(CreateSeriesHandler::getClientRequest)
                              .orElseThrow(failure -> new BadRequestException(failure.getException().getMessage()));
-        var pid = publicationChannelClient.createSeries(validInput);
-        var createdUri = constructIdUri(PATH_ELEMENT, pid.getPid());
-        addAdditionalHeaders(() -> Map.of(HttpHeaders.LOCATION, createdUri.toString()));
-        return null;
+        var createResponse = publicationChannelClient.createSeries(validInput);
+
+        return FetchByIdAndYearResponse.create(
+            constructIdUri(SERIES_PATH_ELEMENT, createResponse.getPid()),
+            (ThirdPartySeries) publicationChannelClient.getChannel(SERIES, createResponse.getPid(), getYear()),
+            getYear());
+    }
+
+    private static String getYear() {
+        return String.valueOf(Calendar.getInstance().getWeekYear());
     }
 
     private static DataportenCreateSeriesRequest getClientRequest(CreateSeriesRequest request) {
